--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Continious Integration
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
   test:
-    needs: [ build ]
+    needs: [build]
     name: Test
     runs-on: ubuntu-latest
     steps:
@@ -32,14 +32,14 @@ jobs:
         dotnet-version: 7.0.x
     - run: dotnet tool restore
     - run: dotnet coverage collect dotnet test --output ./output.cobertura.xml --output-format cobertura
-    - run: dotnet reportgenerator -reports:./output.cobertura.xml -targetdir:"." -reporttypes:Clover -assemblyfilters:"-FluentValidation;-Humanizer;-OidcClient;-IdentityModel.OidcClient;-Microsoft.TestPlatform*;-Microsoft.VisualStudio*;-xunit*;"
+    - run: dotnet reportgenerator -reports:./output.cobertura.xml -targetdir:"." -reporttypes:Clover -assemblyfilters:"-FluentValidation;-Humanizer;-OidcClient;-IdentityModel.OidcClient;-Microsoft.TestPlatform*;-Microsoft.VisualStudio*;-xunit*;-Pipelines.Sockets*;-StackExchange.Redis*;"
     - uses: paambaati/codeclimate-action@v3.2.0
       env:
         CC_TEST_REPORTER_ID:
       with:
         coverageLocations: ${{github.workspace}}/Clover.xml:clover
   analyze:
-    needs: [ build ]
+    needs: [build]
     name: Analyze
     runs-on: ubuntu-latest
     permissions:
@@ -49,7 +49,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'csharp' ]
+        language: ["csharp"]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
