--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,9 +9,7 @@
                 "build",
                 "${workspaceFolder}/.dev/EngineBay.DevHarness.sln",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary",
-                "-c",
-                "dev"
+                "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
         },
@@ -35,9 +33,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/api/",
-                "-c",
-                "dev"
+                "${workspaceFolder}/api/"
             ],
             "problemMatcher": "$msCompile"
         }
