#patch. split dev harness and demo api into separate repos (#3)
* Merge branch 'main' in#patch. split dev harness and demo api into separate reposto initial

* checkout submodules in CI

* recreate the sln file

* update gitmodules to track main

* remove cd yml. remove test and analyze steps in ci build

* update readme file

* change gitmodules to releative url

* Update readme

---------

Co-authored-by: Janus Liebenberg <janus.liebenberg@entelect.co.uk>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/api/EngineBay.DemoApi/bin/Debug/net7.0/EngineBay.DemoApi.dll",
+            "program": "${workspaceFolder}/demo-api/EngineBay.DemoApi/bin/Debug/net7.0/EngineBay.DemoApi.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/api/EngineBay.DemoApi",
+            "cwd": "${workspaceFolder}/demo-api/EngineBay.DemoApi",
             "stopAtEntry": false,
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
