--- a/.gitmodules
+++ b/.gitmodules
@@ -1,51 +1,72 @@
 [submodule "actor-engine"]
 	path = actor-engine
-	url = git@github.com:engine-bay/actor-engine.git
+	url =../actor-engine.git
+	branch = main
 [submodule "admin-portal"]
 	path = admin-portal
-	url = git@github.com:engine-bay/admin-portal.git
+	url =../admin-portal.git
+	branch = main
 [submodule "api-documentation"]
 	path = api-documentation
-	url = git@github.com:engine-bay/api-documentation.git
+	url =../api-documentation.git
+	branch = main
 [submodule "authentication"]
 	path = authentication
-	url = git@github.com:engine-bay/authentication.git
+	url =../authentication.git
+	branch = main
 [submodule "blueprints"]
 	path = blueprints
-	url = git@github.com:engine-bay/blueprints.git
+	url =../blueprints.git
+	branch = main
 [submodule "core"]
 	path = core
-	url = git@github.com:engine-bay/core.git
+	url =../core.git
+	branch = main
 [submodule "cors"]
 	path = cors
-	url = git@github.com:engine-bay/cors.git
+	url =../cors.git
+	branch = main
 [submodule "data-protection"]
 	path = data-protection
-	url = git@github.com:engine-bay/data-protection.git
+	url =../data-protection.git
+	branch = main
 [submodule "database-management"]
 	path = database-management
-	url = git@github.com:engine-bay/database-management.git
+	url =../database-management.git
+	branch = main
 [submodule "demo-module"]
 	path = demo-module
-	url = git@github.com:engine-bay/demo-module.git
+	url =../demo-module.git
+	branch = main
 [submodule "documentation-portal"]
 	path = documentation-portal
-	url = git@github.com:engine-bay/documentation-portal.git
+	url =../documentation-portal.git
+	branch = main
 [submodule "engine-bay-ce"]
 	path = engine-bay-ce
-	url = git@github.com:engine-bay/engine-bay-ce.git
+	url =../engine-bay-ce.git
+	branch = main
 [submodule "logging"]
 	path = logging
-	url = git@github.com:engine-bay/logging.git
+	url =../logging.git
+	branch = main
 [submodule "module-template"]
 	path = module-template
-	url = git@github.com:engine-bay/module-template.git
+	url =../module-template.git
+	branch = main
 [submodule "persistence"]
 	path = persistence
-	url = git@github.com:engine-bay/persistence.git
+	url =../persistence.git
+	branch = main
 [submodule "sheet-functions"]
 	path = sheet-functions
-	url = git@github.com:engine-bay/sheet-functions.git
+	url =../sheet-functions.git
+	branch = main
 [submodule "telemetry"]
 	path = telemetry
-	url = git@github.com:engine-bay/telemetry.git
+	url =../telemetry.git
+	branch = main
+[submodule "demo-api"]
+	path = demo-api
+	url =../demo-api.git
+	branch = main
