--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
             // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
-            "name": ".NET Core Launch (web)",
+            "name": "Demo API (Web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -13,6 +13,35 @@
             "program": "${workspaceFolder}/demo-api/EngineBay.DemoApi/bin/Debug/net7.0/EngineBay.DemoApi.dll",
             "args": [],
             "cwd": "${workspaceFolder}/demo-api/EngineBay.DemoApi",
+            "stopAtEntry": false,
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development",
+                "ASPNETCORE_URLS": "http://localhost:5050",
+                "DATABASE_RESET": "true",
+                "DATABASE_RESEED": "true",
+                "DATABASE_PROVIDER": "InMemory",
+                "AUTHENTICATION_METHOD": "Basic",
+                "AUTHENTICATION_AUDIENCE": "http://localhost:5050",
+                "AUTHENTICATION_ISSUER": "http://localhost:5050",
+                "AUTHENTICATION_VALIDATE_ISSUER_SIGNING_KEY": "false",
+                "API_DOCUMENTATION_ENABLED": "true",
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
+            // Use IntelliSense to find out which attributes exist for C# debugging
+            // Use hover for the description of the existing attributes
+            // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
+            "name": "CommunityEdition (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build",
+            // If you have changed target frameworks, make sure to update the program path.
+            "program": "${workspaceFolder}/engine-bay-ce/EngineBay.CommunityEdition/bin/Debug/net7.0/EngineBay.CommunityEdition.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/engine-bay-ce/EngineBay.CommunityEdition",
             "stopAtEntry": false,
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
