--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,6 @@
 	path = auditing
 	url =../auditing.git
 	branch = main
+[submodule "rate-limiting"]
+	path = rate-limiting
+	url = git@github.com:engine-bay/rate-limiting.git
