#patch. update dev harness with rate limiting changes (#11)
* #patch. update dev harness with rate limiting changes

* #patch. switch git module to relative path

---------

Co-authored-by: Janus Liebenberg <janus.liebenberg@entelect.co.uk>

--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,6 @@
 	path = auditing
 	url =../auditing.git
 	branch = main
+[submodule "rate-limiting"]
+	path = rate-limiting
+	url = ../rate-limiting.git
